changing homelayout new posts homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,14 +6,10 @@ layout: archive
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
-{% if paginator %}
-  {% assign posts = paginator.posts %}
-{% else %}
-  {% assign posts = site.posts %}
-{% endif %}
-
-{% for post in posts %}
-  {% include archive-single-pagination.html %}
+{% for post in site.posts limit:1 %}
+  {% include archive-single.html %}
 {% endfor %}
 
-{% include paginator.html %}
+{% for post in site.posts offset:1 limit:2 %}
+  {% include archive-single.html %}
+{% endfor %}
