removed recent pages from home

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: archive
   {% include menu-categories.html %}
 {%- endfor %}
 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Pages" }}</h3>
+<!-- <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Pages" }}</h3>
 
 {%- for p in site.pages limit:1 %}
   {% include menu-categories.html %}
@@ -23,3 +23,4 @@ layout: archive
 {%- for p in site.pages offset:1 limit:2 %}
   {% include menu-categories.html %}
 {%- endfor %}
+-->
