--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -108,7 +108,9 @@ body {
   p,
   li,
   dl {
-    font-size: 1em;
+    /* mox: change 20200731 */
+    /* font-size: 1em; */
+    font-size: 0.8em;
   }
 
   /* paragraph indents */
