--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -27,9 +27,7 @@ h3,
 h4,
 h5,
 h6 {
-  /* mox: change 20200731 */
-  /* margin: 2em 0 0.5em; */
-  margin: 1.3em 0 0 0.5em;
+  margin: 2em 0 0.5em;
   line-height: 1.2;
   font-family: $header-font-family;
   font-weight: bold;
@@ -156,8 +154,8 @@ kbd,
 samp,
 pre {
   font-family: $monospace;
-  /* jm: added 20200731 */
-  font-size: 0.8em;
+  /* mox: added 20200731 */
+  font-size: 0.9em;
 }
 
 pre {
