--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,16 +4,20 @@ layout: archive
 
 {{ content }}
 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent posts" }}</h3>
 {%- if paginator %}
   {%- assign posts = paginator.posts %}
 {%- else %}
   {%- assign posts = site.posts %}
 {%- endif %}
-<div class="entries-{{ page.entries_layout | default: 'list' }}">
-  {% for p in posts %}
-    {% include menu-categories.html type=page.entries_layout %}
-  {% endfor %}
-</div>
 
+<section id="posts" class="taxonomy__section">
+  <h2 class="archive__subtitle">Recent posts</h2>
+  <div class="entries-{{ page.entries_layout | default: 'list' }}">
+  {%- for p in posts -%}
+    {%- unless p.hidden -%}
+      {%- include menu-categories.html -%}
+    {%- endunless -%}
+  {%- endfor -%}
+  </div>
 {% include paginator.html %}
+</section>
