css: changed link colors

--- a/_sass/minimal-mistakes/skins/_default.scss
+++ b/_sass/minimal-mistakes/skins/_default.scss
@@ -3,3 +3,7 @@
    ========================================================================== */
 
 // Intentionally left blank
+
+// 20200802 mox: changed colors of links
+$link-color: #4b3621 !default;       // cafe noir
+$link-color-hover: #0366d6 !default; // cyan-blue
